--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
+
+/public/storage
 /public/build
 /public/hot
-/public/storage
+# /public/pending-records
+# /public/pending-reservation
+# /public/pending-tamlik
 /storage/*.key
 /vendor
 .env
