--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 /public/storage
 /public/build
 /public/hot
-# /public/pending-records
-# /public/pending-reservation
-# /public/pending-tamlik
+/public/pending-records
+/public/pending-reservation
+/public/pending-tamlik
 /storage/*.key
 /vendor
 .env
