--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /node_modules
 
-/public/storage
-/public/build
-/public/hot
-/public/pending-records
-/public/pending-reservation
-/public/pending-tamlik
+# /public/storage
+# /public/build
+# /public/hot
+# /public/pending-records
+# /public/pending-reservation
+# /public/pending-tamlik
 /storage/*.key
 /vendor
 .env
